--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "next": "13.4.3",
+    "next-api-method": "^0.0.0",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.2.3",
+    "@types/nodemailer": "^6.4.8",
+    "@types/react": "18.2.6",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3"
+    "eslint-config-next": "13.4.3",
+    "typescript": "^5.0.4"
   }
 }
