--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "next": "13.4.3",
     "next-api-method": "^0.0.0",
     "nodemailer": "^6.9.2",
