--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
 {
-  "name": "email-portal",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vercel dev"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "next": "13.4.3",
-    "next-api-method": "^0.0.0",
-    "nodemailer": "^6.9.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "nodemailer": "^6.9.2"
   },
   "devDependencies": {
-    "@types/node": "20.2.3",
-    "@types/nodemailer": "^6.4.8",
-    "@types/react": "18.2.6",
-    "typescript": "^5.0.4"
+    "@types/node": "^20.2.3"
   }
 }
